[package]
name = "nihav_misc"
version = "0.1.0"
authors = ["Kostya Shishkov <kostya.shishkov@gmail.com>"]
edition = "2018"

[dependencies.nihav_core]
path = "../nihav-core"

[dependencies.nihav_codec_support]
path = "../nihav-codec-support"

[dev-dependencies]
nihav_commonfmt = { path = "../nihav-commonfmt", default-features=false, features = ["all_demuxers"] }

[features]
default = ["all_decoders"]
decoders = []

all_decoders = ["all_video_decoders", "all_audio_decoders"]

all_video_decoders = ["decoder_mwv1"]
decoder_mwv1 = ["decoders"]

all_audio_decoders = []
